Misc inv organize cleanup, fixes, translations